# easystroke

./: .gitignore  CMakeLists.txt  cellrenderertextish.vala  main.cc  trace.h  util.h  var.h
trace/: annotate.cc  annotate.h  composite.cc  composite.h  fire.cc  fire.h  shape.cc  shape.h  water.cc  water.h
